modules/cli/src/test/resources/good/reach/globals/gdo/Test06b.scr
module good.reach.globals.gdo.Test06b;


global protocol Foo(role A, role B)
{
	choice at A
	{
		1() from A to B;
		do Bar(A, B);
	}
	or
	{
		do Bar(A, B);
	}
}

global protocol Bar(role C, role D)
{
	5() from C to D;
	do Bar(C, D);
}

